XWATCH-126: Too long feed names prevent access to the feed actions * removed the expand button for feeds in cross browser manner
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-products/xwiki-watch/trunk@10576 f329d543-caf0-0310-9063-dda96c69346f

--- a/gwt/src/main/java/com/xpn/xwiki/watch/public/Watch.css
+++ b/gwt/src/main/java/com/xpn/xwiki/watch/public/Watch.css
@@ -256,10 +256,6 @@ div.watch-feedtree-deletefeed, div.watch-feedtree-deletegroup, div.watch-keyword
 	white-space: normal;
 }
 
-#Watch div.watch-main div.watch-feedtree div.watch-feedtree-groups div span div table tbody tr td:first-child  {
-	display: none;
-}
-
 
 
 
